docs-archive/apache-airflow-providers-teradata/3.7.1/_sources/_api/airflow/providers/teradata/transfers/s3_to_teradata/index.rst.txt
airflow.providers.teradata.transfers.s3_to_teradata
===================================================

.. py:module:: airflow.providers.teradata.transfers.s3_to_teradata


Classes
-------

.. autoapisummary::

   airflow.providers.teradata.transfers.s3_to_teradata.S3ToTeradataOperator


Module Contents
---------------

.. py:class:: S3ToTeradataOperator(*, s3_source_key, public_bucket = False, teradata_table, aws_conn_id = 'aws_default', teradata_conn_id = 'teradata_default', teradata_authorization_name = '', **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Loads CSV, JSON and Parquet format data from Amazon S3 to Teradata.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3ToTeradataOperator`

   :param s3_source_key: The URI format specifying the location of the S3 bucket.(templated)
       The URI format is /s3/YOUR-BUCKET.s3.amazonaws.com/YOUR-BUCKET-NAME.
       Refer to
       https://docs.teradata.com/search/documents?query=native+object+store&sort=last_update&virtual-field=title_only&content-lang=en-US
   :param public_bucket: Specifies whether the provided S3 bucket is public. If the bucket is public,
       it means that anyone can access the objects within it via a URL without requiring authentication.
       If the bucket is private and authentication is not provided, the operator will throw an exception.
   :param teradata_table: The name of the teradata table to which the data is transferred.(templated)
   :param aws_conn_id: The Airflow AWS connection used for AWS credentials.
   :param teradata_conn_id: The connection ID used to connect to Teradata
       :ref:`Teradata connection <howto/connection:teradata>`.
   :param teradata_authorization_name: The name of Teradata Authorization Database Object,
       is used to control who can access an S3 object store.
       Refer to
       https://docs.teradata.com/r/Enterprise_IntelliFlex_VMware/Teradata-VantageTM-Native-Object-Store-Getting-Started-Guide-17.20/Setting-Up-Access/Controlling-Foreign-Table-Access-with-an-AUTHORIZATION-Object


   When ``teradata_authorization_name`` is not set and the object store is private, the store's
   credentials are sent to Teradata inside the ``CREATE TABLE`` statement itself. Teradata records
   that statement in its own query logs (DBQL) and monitoring views, which Airflow cannot redact,
   so the credentials are readable by anyone with access to those. Prefer an AUTHORIZATION object,
   which keeps the credentials in the database instead of in each statement.
   Note that ``s3_source_key`` and ``teradata_table`` are
   templated, so you can use variables in them if you wish.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('s3_source_key', 'teradata_table', 'aws_conn_id', 'teradata_conn_id')



   .. py:attribute:: ui_color
      :value: '#e07c24'



   .. py:attribute:: s3_source_key


   .. py:attribute:: public_bucket
      :value: False



   .. py:attribute:: teradata_table


   .. py:attribute:: aws_conn_id
      :value: 'aws_default'



   .. py:attribute:: teradata_conn_id
      :value: 'teradata_default'



   .. py:attribute:: teradata_authorization_name
      :value: ''



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



